reported_result for IEEE methods with clustering