@@ -26,6 +26,16 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.spark</groupId>-->
+<!--            <artifactId>spark-core_2.12</artifactId>-->
+<!--            <version>RELEASE</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.spark</groupId>-->
+<!--            <artifactId>spark-mllib_2.12</artifactId>-->
+<!--            <version>RELEASE</version>-->
+<!--        </dependency>-->
     </dependencies>
     <build>
         <plugins>
@@ -63,6 +73,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
+                <configuration>
+                    <argLine>--add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
